Enforce __set_state() parameter type

This fixes one of the issues reported in bug #79925. The parameter
type check for this particular method was missed.